test/libyul/yulSyntaxTests/opcode_for_functions.yul
{
	function mload() {}
}
// ----
// ParserError 5568: (12-17): Cannot use builtin function name "mload" as identifier name.
